fixed spacing

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -45,7 +45,7 @@
      }
 
      .blog-section .first-article {
-          padding-bottom: 70px;
+          padding-bottom: 120px;
      }
 
      .blog-section .article-content {
