--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1027,7 +1027,7 @@ aside.contact-info a:hover, aside.contact-info a:focus {
   }
 
   .blog-section .first-article {
-    padding-bottom: 70px;
+    padding-bottom: 120px;
   }
 
   .blog-section .article-content {
